feat(mfa): show the TOTP QR code on the verify page during enrollment
Refs: AM-7609